--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,8 +33,6 @@
   50% { opacity: 0.2; }
 }
 
-/* body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-} */
+body {
+  background: #000;
+}
