--- a/src/app/style.scss
+++ b/src/app/style.scss
@@ -61,7 +61,7 @@ header {
 
 .topCategories {
   width: 100%;
-  height: 100vh;
+  
  margin-top: 50% !important;
   padding-top: 10%;
   padding-bottom: 3%;
@@ -78,4 +78,38 @@ header {
     font-weight: bold;
     text-align: left;
   }
+}
+
+
+
+// Partie pour le filtre
+.p_liste{
+  padding: 3% 4%;
+}
+.filter_container{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-content: center;
+
+  gap: 10px;
+  width: 100%;
+  height: 100px;
+  box-shadow: 2px 2px 9px rgba(228, 225, 225, 0.11);
+
+}
+
+.Categories{
+  display: flex;
+  flex-direction:column ;
+
+  select {
+ color: white;
+ option{
+    border:1px solid gray;
+    color: gray;
+  }
+  }
+ 
+  
 }
