--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -17,12 +17,15 @@
 .squelletons{
     margin-top: -98%;
     overflow: hidden;
-    opacity: 20%;
+    opacity: 30%;
  
 }
 .squelleteSize{
    width: 100%;
    height: 100%; 
+}
+.socialTools{
+    margin-top: 50%;
 }
 .lineLite{
     opacity: 100%;
